tests/export_star_as/cycle.js
export * from './cycle'; // error: cycle
